Quick fix - mobile view text overlap

--- a/css/AgdaGlobalStyles.css
+++ b/css/AgdaGlobalStyles.css
@@ -33,11 +33,11 @@
 }
 
 .about__text {
-    margin-top: 10vh;
+    margin-top: 15vh;
 }
 
 .faq__title {
-    margin-top: 10vh;
+    margin-top: 15vh;
 }
 
 .contact {
